--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,4 +1,10 @@
 <div class="contactForm">
+	<div class="news" style="margin-top: 30px">
+		現在ベータ版で試運転中です！お気軽にご意見・ご要望申し付けください。<br>
+		あなたの声がサービスの向上につながります。<br><br>
+		アゲラタム公式Twitterでも、ご意見・ご要望承っております。DM、リプライお好きな形でのメッセージをお待ちしております。   	
+    </div>
+	
 	<div class="wrapper">
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf0mYnzSc1Pxfkvz1aURzoWRvEYIPz1Fr1YjXFwp4qt884AeQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます...</iframe>
 	</div>
