--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,6 +3,43 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+/*****************************
+
+news
+
+******************************/
+
+.news{	
+    width: 60%;
+    margin: 0 auto;
+    border: double 6px #ffa07a;
+    padding: 10px 15px
+}
+
+ .news p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: pre-wrap;
+}
+
+
+
+
+/*****************************
+
+notes
+
+******************************/
+
+.notes{
+	margin-bottom: 10px;
+}
+
+.notes a{
+	text-decoration: underline;
+}
+
 
 /*****************************
 
@@ -15,52 +52,6 @@ Phase1
 	padding: 50px 0;
 	width: 100%;
 	background-color: #f0f8ff;
-}
-
-.introduction{
-	font-size: 25px;
-	font-weight: 800;
-	padding: 40px 0;
-	color: #464646;
-}
-
-.notes{
-	margin-bottom: 10px;
-}
-
-.notes a{
-	text-decoration: underline;
-}
-
-.buttons{
-	padding-bottom: 40px;
-}
-
-.button{
-	width: 220px;
-	height: 30px;
-	margin: 10px auto;
-	padding: 5px 7px;
-	border-radius: 7px;
-	color: #ffffff;
-	font-size: 18px;
-	font-weight: 500;
-	box-shadow: 0 3px #dcdcdc;
-	border: 4px solid #a7d28d;
-	background-color: #a7d28d;
-}
-
-.button a{
-	color: #ffffff;
-}
-
-.button:hover{
-	cursor: pointer;
-}
-
-.button:active{
-	box-shadow: none;
-	opacity: 0.8;
 }
 
 
@@ -104,8 +95,52 @@ Contact Form
 .contactForm iframe{
 	margin: 50px 0;
 	width: 100%;
-	height: 950px;
+	height: 1000px;
 }
+
+/*****************************
+
+privacypolicy && termsofservice
+
+******************************/
+
+.ageratuminfo{
+	width: 70%;
+	margin: 50px auto;
+	padding: 20px 10px;
+	text-align: left;
+}
+
+.ageratuminfo h2{
+	text-align: center;
+	padding-bottom: 20px;
+}
+
+.description{
+	text-align: center;
+	margin-bottom: 20px;
+}
+
+.infoContent{
+	padding: 10px 0;
+	margin: 20px 0;
+    letter-spacing: 1.5px;
+}
+
+
+
+/*****************************
+
+howtouse
+
+******************************/
+
+.howToUse{
+	width: 100%;
+	margin: 50px 0;
+}
+
+
 
 
 /*****************************
@@ -115,11 +150,6 @@ responsive
 ******************************/
 
 @media(max-width: 450px){
-	.introduction{
-		font-size: 18px;
-		padding: 40px 5%;
-	}
-
 	.notes{
 		margin: 0 5% 10px;
 	}
@@ -127,11 +157,11 @@ responsive
 	.phase2{
 		margin: 30px 0;
 	}
+
 }
 
-
 @media(max-width: 1200px){
-	.phase2 img{
+	.phase2 img, .howToUse img{
 		width: 100%;
 	}
 }
