--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,16 +25,7 @@
 			<% else %>
 					<div class="content">
 						<ul class="reviewContent">
-							<li class="profileContentItem"><h3>主に取引をしている作品・ジャンル</h3><p><%= simple_format(@info.genre) %></p></li>
-							<li class="profileContentItem"><h3>現在の取引状況</h3><p><% @info.activation.each do |activation| %><%= activation %>&emsp;<% end %></p></li>
-							<li class="profileContentItem"><h3>取引の種類</h3><p><% @info.trading.each do |trading| %><%= trading %>&emsp;<% end %></p></li>
-							<li class="profileContentItem"><h3>取引の方法</h3><p><% @info.method.each do |method| %><%= method %>&emsp;<% end %></p></li>
-							<li class="profileContentItem"><h3>連絡</h3><p><% @info.contact.each do |contact| %><%= contact %>&emsp;<% end %></p></li>
-							<li class="profileContentItem"><h3>取引までの日数</h3><p><% @info.shipment.each do |shipment| %><%= shipment %>&emsp;<% end %></p></li>
-							<li class="profileContentItem"><h3>梱包</h3><p><% @info.packing.each do |packing| %><%= packing %>&emsp;<% end %></p></li>
-							<li class="profileContentItem"><h3>金銭のやり取り</h3><p><% @info.money.each do |money| %><%= money %>&emsp;<% end %></p></li>
-							<li class="profileContentItem"><h3>過去の取引実績</h3><p><%= @info.history %></p></li>
-							<li class="profileContentItem"><h3>フリースペース</h3><p><%= simple_format(@info.other) %></p></li>
+							<li class="profileContentItem"><h3>取引の種類</h3><p><%= @info.val1 %>&emsp;<%= @info.val2 %>&emsp;<%= @info.val3 %>&emsp;<%= @info.val4 %></p></li>
 						</ul>
 					</div>
 			<% end %>
