--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,10 @@
     <meta property="og:image" content="/ageratum_icon.jpg"> 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@ageratum891003">
+	<meta name="twitter:creator" content="@black_black445">
+	<meta name="twitter:title" content="アゲラタム取引信用チェッカー">
+	<meta name="twitter:description" content="あなたに快適なお取引を・・・　アゲラタムで楽しいお取引ライフをはじめよう！">
+	<meta name="twitter:image" content="/ageratum_icon.jpg">
    
     
     <%= csrf_meta_tags %>
