--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -17,13 +17,14 @@
 	</div>
 </article>
 
-<!-- 何かお知らせ -->
+<!-- 何かお知らせあれば
 <% if !$news.empty? %>
     <div class="news">
     	<h3>お知らせ</h3>
         <p><%= $news %></p>
     </div>
 <% end %>
+ -->
 
 <article class="phase2">
 	<div class="about">
