--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,8 +1,7 @@
 <div class="contactForm">
 	<div class="news" style="margin-top: 30px">
-		現在ベータ版で試運転中です！お気軽にご意見・ご要望申し付けください。<br>
-		あなたの声がサービスの向上につながります。<br><br>
-		アゲラタム公式Twitterでも、ご意見・ご要望承っております。DM、リプライお好きな形でのメッセージをお待ちしております。   	
+		お気軽にご意見・ご要望申し付けください。<br>
+		あなたの声がサービスの向上につながります。<br> 	
     </div>
 	
 	<div class="wrapper">
