--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,7 +112,7 @@
             <li><%= link_to("お問い合わせ", "/contact") %></li>
           </ul>
         </div>
-        <div class="copyright">©2018 アゲラタム 取引信用チェッカー</div>
+        <div class="copyright">©2018-2021 アゲラタム 取引信用チェッカー</div>
       </div>
   </footer>
 
