--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width-device, initial-scale=1.0">
 
-    <!-- メタ情報　for twitterシェア　要改良 -->
+    <!-- メタ情報　for twitterシェア　to be improved -->
     <meta property="og:url" content="https://ageratum-reliability-checker.herokuapp.com/">
     <meta property="og:title" content="アゲラタム取引信用チェッカー">
     <meta property="og:description" content="あなたに快適なお取引を・・・　アゲラタムで楽しいお取引ライフをはじめよう！">
