--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -12,7 +12,7 @@
 			<div class="notes">
 				※<%= link_to("利用規約", "/termsofservice") %>および<%= link_to("プライバシーポリシー", "/privacypolicy") %>に同意の上ご利用ください。<br>
 			</div>
-			<div class="button"><%= link_to 'Twitterでログイン', user_twitter_omniauth_authorize_path %></div>
+			<div class="button"><%= link_to 'ログイン', user_twitter_omniauth_authorize_path %></div>
 		<% end %>
 	</div>
 </article>
@@ -48,7 +48,7 @@
 			<div class="notes">
 				※<%= link_to("利用規約", "/termsofservice") %>および<%= link_to("プライバシーポリシー", "/privacypolicy") %>に同意の上ご利用ください。<br>
 			</div>
-			<div class="button"><%= link_to 'Twitterでログイン', user_twitter_omniauth_authorize_path %></div>
+			<div class="button"><%= link_to 'ログイン', user_twitter_omniauth_authorize_path %></div>
 		<% end %>
 	</div>
 </article>
